--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function() {
+			$('#qrcode').hide();
 			var socket = io();
 
 			socket.on('message', function(msg) {
