--- a/index-multiple-device.html
+++ b/index-multiple-device.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Whatsapp API by Ngekoding</title>
+	<title>Whatsapp API</title>
 	<style>
 	.client {
 		border: 1px solid #ccc;
@@ -19,15 +19,15 @@
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<p>Powered by Ngekoding</p>
+		<p>Powered by https://github.com/enangsubang</p>
 		<div class="form-container">
 			<label for="client-id">ID</label><br>
-			<input type="text" id="client-id" placeholder="Masukkan ID">
+			<input type="text" id="client-id" placeholder="Insert ID">
 			<br><br>
 			<label for="client-description">Deskripsi</label><br>
-			<textarea rows="3" id="client-description" placeholder="Masukkan deskripsi"></textarea>
+			<textarea rows="3" id="client-description" placeholder="Description"></textarea>
 			<br><br>
-			<button class="add-client-btn">Tambah Client</button>
+			<button class="add-client-btn">Add Client</button>
 		</div>
 		<hr>
 		<div class="client-container">
