--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<p>Powered by https://github.com/enangsubang</p>
+		<p>Powered by <a href="https://github.com/enangsubang" target="_BLANK">https://github.com/enangsubang</a></p>
 		<img src="" alt="QR Code" id="qrcode">
 		<h3>Logs:</h3>
 		<ul class="logs"></ul>
