--- a/index-multiple-device.html
+++ b/index-multiple-device.html
@@ -19,7 +19,7 @@
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<p>Powered by https://github.com/enangsubang</p>
+		<p>Powered by <a href="https://github.com/enangsubang" target="_BLANK">https://github.com/enangsubang</a></p>
 		<div class="form-container">
 			<label for="client-id">ID</label><br>
 			<input type="text" id="client-id" placeholder="Insert ID">
